--- a/public/css/style.css
+++ b/public/css/style.css
@@ -65,8 +65,9 @@ body{
     background-image: url('/img/header-img.jpg');
     background-size: cover;
     width: 100%;
-    height: 75vh;
+    height: auto;
     padding: 0 !important;
+    padding-bottom: 30px !important;
 }
 #header-text{
     color: #fff;
