--- a/public/css/style.css
+++ b/public/css/style.css
@@ -61,6 +61,10 @@ body{
     color: #fff;
 }
 
+#warning a{
+    color: #fff;
+}
+
 #home-header{
     background-image: url('/img/header-img.jpg');
     background-size: cover;
@@ -77,7 +81,7 @@ body{
 #header-sub-text{
     color: #fff;
     margin-top: 20px;
-    font-size: 20px;
+    font-size: 30px;
     font-weight: 600;
 }
 
@@ -317,4 +321,7 @@ body{
 .page-footer{
     background-color: rgb(24, 24, 24);
     color: #ffff;
+    bottom: 0 !important;
+    position: absolute;
+    width: 100% !important;
 }
